# statehub-cli

./: .gitlab-ci.yml  Cargo.toml  README.md  justfile  release.toml
scripts/: check_header.py  get-statehub.sh  release.sh  setup.sh
src/: api.rs  kubectl.rs  location.rs  main.rs  output.rs  show.rs  statehub.rs  traits.rs  v0.rs  v1.rs
src/k8s/: helm.rs  helper.rs  kubeconfig.rs  mod.rs  show.rs
src/kubectl/: kube_helper.rs  mod.rs
src/show/: detailed.rs  fun.rs  quiet.rs
src/statehub/: config.rs  helper.rs  mod.rs  print.rs
src/utils/: strings.rs
src/v0/: aws.rs  azure.rs  cluster.rs  error.rs  gcp.rs  login.rs  state.rs  volume.rs
src/v0/cluster/: impls.rs
src/v0/error/: impls.rs
src/v0/state/: impls.rs
src/v0/state/impls/: show.rs
src/v0/volume/: impls.rs
src/v1/: aws.rs  azure.rs  cluster.rs  error.rs  gcp.rs  helm.rs  impls.rs  state.rs  volume.rs
src/v1/cluster/: impls.rs
src/v1/error/: impls.rs
src/v1/gcp/: impls.rs
src/v1/impls/: aws.rs  azure.rs  gcp.rs  volume.rs
src/v1/state/: impls.rs
src/v1/volume/: impls.rs
