[package]
name = "statehub"
version = "0.1.0"
authors = ["The RepliXio developers <info@replixio.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
bytes = "1.0"
dotenv = "0.15"
inspector = { version = "0.1", default-features = false, features = ["result"] }
itertools = "0.10"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = "0.52"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde"] }
