[package]
name = "statehub"
version = "0.0.2"
authors = ["The RepliXio developers <info@replix.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/statehub/statehub-cli"
categories = ["command-line-utilities"]
description = "statehub CLI tool"
keywords = ["statehub", "cli"]

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
inspector = { version = "0.1", default-features = false, features = ["result"] }
itertools = "0.10"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = "0.55"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.8"
structopt = "0.3"
text_io = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "0.8", features = ["serde"] }
which = "4.1"

[features]
pedantic = []
