[package]
name = "statehub"
version = "0.0.13"
authors = ["The RepliXio developers <info@replix.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/statehub/statehub-cli"
categories = ["command-line-utilities"]
description = "statehub CLI tool"
keywords = ["statehub", "cli"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.13"
dialoguer = "0.8"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-humanize = "0.2"
dotenv = "0.15"
directories = "3.0"
inspector = { version = "0.1", default-features = false, features = ["result"] }
itertools = "0.10"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_20"] }
kube = { version = "0.56", default-features = false, features = ["client", "rustls-tls"] }
log = "0.4"
pretty_env_logger = "0.4"
secrecy = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.8"
structopt = "0.3"
thiserror = "1.0"
tokio = { version = "1.0", features = ["fs", "macros", "net", "process", "rt-multi-thread"] }
toml = "0.5"
uuid = { version = "0.8", features = ["serde"] }
which = "4.1"

[features]
pedantic = []
